--- a/back-end/.env
+++ b/back-end/.env
@@ -1,4 +1,4 @@
 PORT = 2001
-URL_MONGO=mongodb://127.0.0.1:27017/ecomerce
+URL_MONGO=mongodb+srv://quangdev2001:quangdev2001@cluster0.drnajfk.mongodb.net/ecomerce
 HOST = localhost
 JWT_ACCESS_KEY = test
