--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "export NODE_OPTIONS=--openssl-legacy-provider",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
