--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider' next dev",
     "build": "next build",
-  "start": "NODE_OPTIONS=--openssl-legacy-provider next start"
+    "start": "next start"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
