--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "cross-env PORT=3001 NODE_OPTIONS='--openssl-legacy-provider' next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "cross-env PORT=3001 NODE_OPTIONS='--openssl-legacy-provider' next start"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
