--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env PORT=3001 NODE_OPTIONS='--openssl-legacy-provider' next dev",
-    "build": "NODE_OPTIONS='--openssl-legacy-provider' next build",
+"build": "cross-env NODE_OPTIONS='--openssl-legacy-provider' next build",
     "start": "cross-env PORT=3001 NODE_OPTIONS='--openssl-legacy-provider' next start"
   },
   "dependencies": {
